--- a/index.html
+++ b/index.html
@@ -33,20 +33,21 @@
 	</div>
 </div>
 
-
-<div class="navbar navbar-default">
-	<ul class="nav navbar-nav">
-       <li class="active"><a href="index.php">Home</a></li>
-       <li><a href="about.php">About</a></li>
-       <li><a href="contact.php">Contact</a></li>
-    </ul>
+<div class="nav">
+	<ul>
+		<li><a href="#">Everything</a></li>
+		<li><a href="#">Print Design</a></li>
+		<li><a href="#">Logo Design</a></li>
+		<li><a href="#">Web Design</a></li>
+	</ul>
 </div>
+
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script src="/js/bootstrap.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
   </body>
 </html>
 
