--- a/index.html
+++ b/index.html
@@ -33,16 +33,23 @@
 	</div>
 </div>
 
-
-<div class="nav">
-	<ul>
-		<li><a href="#">Everything</a></li>
-		<li><a href="#">Print Design</a></li>
-		<li><a href="#">Logo Design</a></li>
-		<li><a href="#">Web Design</a></li>
-	</ul>
+<div class="ribbon">
+	<div class="nav">
+		<ul>
+			<li><a href="#">Everything</a></li>
+			<li><a href="#">Print Design</a></li>
+			<li><a href="#">Logo Design</a></li>
+			<li><a href="#">Web Design</a></li>
+		</ul>
+	</div>
 </div>
 
+<div class="portfolio text-center">
+	<img src="images/portfolio1.png">
+	<img src="images/portfolio2.png">
+	<img src="images/portfolio3.png">
+	<img src="images/portfolio4.png">
+</div>
 
 
     <!-- Bootstrap core JavaScript
@@ -50,6 +57,7 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
 
