--- a/index.html
+++ b/index.html
@@ -44,12 +44,26 @@
 	</div>
 </div>
 
-<div class="portfolio text-center">
-	<img src="images/portfolio1.png">
-	<img src="images/portfolio2.png">
-	<img src="images/portfolio3.png">
-	<img src="images/portfolio4.png">
-</div>
+
+        <div class="grid">
+          <figure class="effect-ruby">
+            <img src="images/13.jpg" alt="img13"/>
+            <figcaption>
+              <h2>Glowing <span>Ruby</span></h2>
+              <p>Ruby did not need any help. Everybody knew that.</p>
+              <a href="#">View more</a>
+            </figcaption>     
+          </figure>
+          <figure class="effect-ruby">
+            <img src="images/14.jpg" alt="img14"/>
+            <figcaption>
+              <h2>Glowing <span>Ruby</span></h2>
+              <p>Ruby did not need any help. Everybody knew that.</p>
+              <a href="#">View more</a>
+            </figcaption>     
+          </figure>
+        </div>
+
 
 
     <!-- Bootstrap core JavaScript
